--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         </nav>
     </header>
     <!-- Image for seperation-->
-    <section class="N">
+    <section>
+        <img class="N-Image" src="assets/Images/Background-Image.jpg" alt= "Placeholder Image">
         <div class ="Nick Facts">
-            <h2>Programmer in training</h2>
+            <h2 class="N" >Programmer in training</h2>
         </div>
     </section>
     <main>
@@ -87,7 +88,7 @@
         </div>
         <!--CONTACT ME content-->
         <section id="Contact-Me">
-                <a href="#">540.223.8561</a>
+                <a href="#">801.628.9591</a>
                 <a href="mailto:nreisne@wgu.edu">nreisne@wgu.edu</a>
                 <a href="https://github.com/reisnern">GitHub</a>
                 <a href="#">Linkedin</a>
