--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
                 </div>
             </div>
             <div class="Work-2">
-                <img class="Work-2-image" src="assets/Images/placeholder.jpeg" alt="placeholder image">
+                <img class="Work-2-image" src="assets/Images/Soundemic Logos-02.png" alt="placeholder image">
                 <div class="work-2-image-text">
-                    <h3>Project 2</h3>
-                    <p>Advanced CSS</p>
+                    <h3>Interactive Full-Stack Project</h3>
+                    <p></p>
                 </div>
             </div>
             <div class="Work-2">
