--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
             </div>
             <div class="Work-2">
-                <img class="Work-2-image" src="assets/Images/Soundemic Logos-02.png" alt="placeholder image">
+                <img class="Work-2-image" href="https://soundemic.herokuapp.com/" src="assets/Images/Soundemic Logos-02.png" alt="Soundemic Logo">
                 <div class="work-2-image-text">
                     <h3>Interactive Full-Stack Project</h3>
                     <p></p>
