--- a/index.html
+++ b/index.html
@@ -56,6 +56,8 @@
             <div class="Work-2">
                 <img class="Work-2-image" href="https://soundemic.herokuapp.com/" src="assets/Images/Soundemic Logos-02.png" alt="Soundemic Logo">
                 <div class="work-2-image-text">
+                    <a class="btn" href="https://soundemic.herokuapp.com/" target="_blank">Project-2/a>
+                    <a class="btn" href="https://github.com/reisnern/music-selector" target="_blank">View Code</a>
                     <h3>Interactive Full-Stack Project</h3>
                     <p></p>
                 </div>
